# neptune-triton

./: Makefile.am  Makefile.in  README  configure  configure.ac  neptune-1.1.desktop  triton-1.1.desktop
Neptune/: AutoColourEdit.cc  BailoutCondition.cc  BailoutCondition.h  CalculatingUnit.h  CalculatingUnitGeneric.h  CalculatingUnitLD.h  CalculatingUnitMP.cc  ColourMaps.cc  ColouringTab.cc  ColouringTab.h  Colours.cc  ComplexParametersContainer.cc  ComplexParametersContainer.h  Config.cc  Config.h  CriticalPointFinder.h  CriticalPointsContainer.cc  CriticalPointsContainer.h  ExportColourMap.cc  Fractal.cc  Fractal.h  FractalConfig.cc  FractalConfig.h  FractalSettingsWindow.cc  FractalSettingsWindow.h  FractalTab.cc  FractalTab.h  FractalsConfig.cc  FractalsConfig.h  ImageTab.cc  ImportColourMap.cc  MainWindow.cc  MainWindow.h  Neptune.h  OptionComboboxes.cc  OptionComboboxes.h  Utilities.h  main.cc  resources.qrc
Triton/: CalculatingUnit.cc  CalculatingUnitGeneric.h  CalculatingUnitLD.cc  CalculatingUnitMP.h  Colours.h  CriticalPointFinder.cc  CriticalPointFinder.h  FractalConfig.cc  FractalConfig.h  MainWindow.cc  MainWindow.h  OrbitTraps.cc  OrbitTraps.h  Picture.cc  Picture.h  StaticCalculatingUnit.cc  StaticCalculatingUnit.h  Summary.cc  Summary.h  Triton.h  TypesAndConstants.h  Utilities.cc  Waveform.cc  ldcomplex.h  main.cc  resource.qrc
