bin_PROGRAMS = neptune11 triton11
neptune11_SOURCES = Neptune/AutoColourEdit.cc \
                   Neptune/AutoColourEdit.h \
                   Neptune/BailoutColouring.cc \
                   Neptune/BailoutColouring.h \
                   Neptune/BailoutCondition.cc \
                   Neptune/BailoutCondition.h \
                   Neptune/CalculatingUnit.cc \
                   Neptune/CalculatingUnitGeneric.h \
                   Neptune/CalculatingUnit.h \
                   Neptune/CalculatingUnitLD.cc \
                   Neptune/CalculatingUnitLD.h \
                   Neptune/CalculatingUnitMP.cc \
                   Neptune/CalculatingUnitMP.h \
                   Neptune/ColourEdit.cc \
                   Neptune/ColourEdit.h \
                   Neptune/ColouringTab.cc \
                   Neptune/ColouringTab.h \
                   Neptune/ColourList.cc \
                   Neptune/ColourList.h \
                   Neptune/ColourMap.cc \
                   Neptune/ColourMap.h \
                   Neptune/ColourMapList.cc \
                   Neptune/ColourMapList.h \
                   Neptune/ColourMaps.cc \
                   Neptune/ColourMaps.h \
                   Neptune/Colours.cc \
                   Neptune/Colours.h \
                   Neptune/ColourTab.cc \
                   Neptune/ColourTab.h \
                   Neptune/ComplexParametersContainer.cc \
                   Neptune/ComplexParametersContainer.h \
                   Neptune/ComponentColourEdit.cc \
                   Neptune/ComponentColourEdit.h \
                   Neptune/Config.cc \
                   Neptune/Config.h \
                   Neptune/CriticalPointsContainer.cc \
                   Neptune/CriticalPointsContainer.h \
                   Neptune/CriticalPointFinder.cc \
                   Neptune/CriticalPointFinder.h \
                   Neptune/ExportColourMap.cc \
                   Neptune/ExportColourMap.h \
                   Neptune/Fractal.cc \
                   Neptune/FractalConfig.cc \
                   Neptune/FractalConfig.h \
                   Neptune/FractalDrawing.cc \
                   Neptune/FractalDrawing.h \
                   Neptune/Fractal.h \
                   Neptune/FractalList.cc \
                   Neptune/FractalList.h \
                   Neptune/FractalsConfig.cc \
                   Neptune/FractalsConfig.h \
                   Neptune/FractalSettingsWindow.cc \
                   Neptune/FractalSettingsWindow.h \
                   Neptune/FractalTab.cc \
                   Neptune/FractalTab.h \
                   Neptune/ImageSize.cc \
                   Neptune/ImageSizeCombo.cc \
                   Neptune/ImageSizeCombo.h \
                   Neptune/ImageSize.h \
                   Neptune/ImageTab.cc \
                   Neptune/ImageTab.h \
                   Neptune/ImportColourMap.cc \
                   Neptune/ImportColourMap.h \
                   Neptune/ImportingTree.cc \
                   Neptune/ImportingTree.h \
                   Neptune/ImportSourceTree.cc \
                   Neptune/ImportSourceTree.h \
                   Neptune/KeyString.cc \
                   Neptune/KeyString.h \
                   Neptune/ldcomplex.h \
                   Neptune/main.cc \
                   Neptune/MainWindow.cc \
                   Neptune/MainWindow.h \
                   Neptune/ManualColourEdit.cc \
                   Neptune/ManualColourEdit.h \
                   Neptune/mpcomplex.h \
                   Neptune/mpreal.h \
                   Neptune/NumberEntry.cc \
                   Neptune/NumberEntry.h \
                   Neptune/OptionComboboxes.cc \
                   Neptune/OptionComboboxes.h \
                   Neptune/OrbitColouring.cc \
                   Neptune/OrbitColouring.h \
                   Neptune/OrbitTraps.cc \
                   Neptune/OrbitTraps.h \
                   Neptune/Neptune.h \
                   Neptune/SingleColour.cc \
                   Neptune/SingleColour.h \
                   Neptune/Splash.cc \
                   Neptune/Splash.h \
                   Neptune/StaticCalculatingUnit.cc \
                   Neptune/StaticCalculatingUnit.h \
                   Neptune/Trap.cc \
                   Neptune/TrapConfig.cc \
                   Neptune/TrapConfig.h \
                   Neptune/Trap.h \
                   Neptune/TypesAndConstants.h \
                   Neptune/Utilities.cc \
                   Neptune/Utilities.h \
                   Neptune/WaveDrawing.cc \
                   Neptune/WaveDrawing.h \
                   Neptune/Waveform.cc \
                   Neptune/Waveform.h \
                   Neptune/resources.qrc
nodist_neptune11_SOURCES = Neptune/AutoColourEdit.moc.cpp \
                          Neptune/BailoutColouring.moc.cpp \
                          Neptune/BailoutCondition.moc.cpp \
                          Neptune/CalculatingUnitGeneric.moc.cpp \
                          Neptune/ColourEdit.moc.cpp \
                          Neptune/ColouringTab.moc.cpp \
                          Neptune/ColourList.moc.cpp \
                          Neptune/ColourMapList.moc.cpp \
                          Neptune/ColourMaps.moc.cpp \
                          Neptune/ColourTab.moc.cpp \
                          Neptune/ComponentColourEdit.moc.cpp \
                          Neptune/ComplexParametersContainer.moc.cpp \
                          Neptune/CriticalPointsContainer.moc.cpp \
                          Neptune/ExportColourMap.moc.cpp \
                          Neptune/Fractal.moc.cpp \
                          Neptune/FractalDrawing.moc.cpp \
                          Neptune/FractalList.moc.cpp \
                          Neptune/FractalSettingsWindow.moc.cpp \
                          Neptune/FractalTab.moc.cpp \
                          Neptune/ImageSizeCombo.moc.cpp \
                          Neptune/ImageSize.moc.cpp \
                          Neptune/ImageTab.moc.cpp \
                          Neptune/ImportColourMap.moc.cpp \
                          Neptune/ImportSourceTree.moc.cpp \
                          Neptune/MainWindow.moc.cpp \
                          Neptune/ManualColourEdit.moc.cpp \
                          Neptune/NumberEntry.moc.cpp \
                          Neptune/OptionComboboxes.moc.cpp \
                          Neptune/OrbitColouring.moc.cpp \
                          Neptune/Neptune.moc.cpp \
                          Neptune/SingleColour.moc.cpp \
                          Neptune/Splash.moc.cpp \
                          Neptune/Trap.moc.cpp \
                          Neptune/WaveDrawing.moc.cpp \
                          Neptune/resources.qrc.cpp
triton11_SOURCES = Triton/CalculatingUnit.h \
                  Triton/CalculatingUnit.cc \
                  Triton/CalculatingUnitGeneric.h \
                  Triton/CalculatingUnitLD.h \
                  Triton/CalculatingUnitLD.cc \
                  Triton/CalculatingUnitMP.h \
                  Triton/CalculatingUnitMP.cc \
                  Triton/ColourMap.h \
                  Triton/ColourMap.cc \
                  Triton/Colours.h \
                  Triton/Colours.cc \
                  Triton/CriticalPointFinder.cc \
                  Triton/CriticalPointFinder.h \
                  Triton/FractalConfig.h \
                  Triton/FractalConfig.cc \
                  Triton/KeyString.h \
                  Triton/KeyString.cc \
                  Triton/ldcomplex.h \
                  Triton/main.cc \
                  Triton/MainWindow.h \
                  Triton/MainWindow.cc \
                  Triton/mpcomplex.h \
                  Triton/mpreal.h \
                  Triton/OrbitTraps.h \
                  Triton/OrbitTraps.cc \
                  Triton/Picture.h \
                  Triton/Picture.cc \
                  Triton/StaticCalculatingUnit.h \
                  Triton/StaticCalculatingUnit.cc \
                  Triton/TypesAndConstants.h \
                  Triton/Triton.h \
                  Triton/Summary.h \
                  Triton/Summary.cc \
                  Triton/Utilities.h \
                  Triton/Utilities.cc \
                  Triton/Waveform.h \
                  Triton/Waveform.cc \
                  Triton/resource.qrc
nodist_triton11_SOURCES = Triton/CalculatingUnitGeneric.moc.cpp \
                         Triton/MainWindow.moc.cpp \
                         Triton/Picture.moc.cpp \
                         Triton/Triton.moc.cpp \
                         Triton/resource.qrc.cpp
neptune11_CXXFLAGS = $(CXXFLAGS) $(QT_CPPFLAGS) -DNOT_MOC
neptune11_LDADD = $(QT_LIBS) $(BOOST_THREAD_LIB) $(BOOST_IOSTREAMS_LIB)  $(BOOST_SYSTEM_LIB) $(GMP_LIB) $(MPFR_LIB)
triton11_CXXFLAGS = $(CXXFLAGS) $(QT_CPPFLAGS) -DBATCH -DNOT_MOC
triton11_LDADD = $(QT_LIBS) $(BOOST_THREAD_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_SYSTEM_LIB) $(GMP_LIB) $(MPFR_LIB)
EXTRA_DIST = neptune-1.1.desktop \
             triton-1.1.desktop \
             LICENSE \
             Neptune/images/neptune.icon.png \
             Neptune/images/splash.png \
             Triton/images/triton.icon.png
neptunedir = $(datadir)/neptune-triton-1.1
neptune_DATA = Neptune/images/neptune.icon.png \
              Triton/images/triton.icon.png
appdir = $(datadir)/applications
app_DATA = neptune-1.1.desktop \
           triton-1.1.desktop

SUFFIXES = .moc.cpp .qrc .qrc.cpp


.h.moc.cpp:
	$(MOC) $(QT_CPPFLAGS) $< -o $@
.qrc.qrc.cpp:
	$(RCC) -name `echo "$<" | sed 's/\.qrc$$//'` $< -o $@

DISTCLEANFILES = $(nodist_triton11_SOURCES) $(nodist_neptune11_SOURCES)
